[project]
name = "e-book-test2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "mcp[cli]>=1.3.0",
    "pdfkit>=1.0.0",
    "pillow>=11.1.0",
    "python-docx>=1.1.2",
    "reportlab>=4.0.0",
    "uvicorn>=0.34.0",
    "requests>=2.32.0",
]
